--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,7 +28,7 @@
   --color-gray: #afa69c;
   --color-black: #1F2937;
   --cell-color: #fff;
-  --card-background: rgba(254, 254, 254, 0.544);
+  --form-background: rgba(232, 232, 232, 0.544);
 }
 
 .dark:root {
@@ -54,7 +54,7 @@
   --modal-primary-color: rgb(34, 42, 66);
   --filter-primary: #c6d4ff84;
   --cell-color: rgb(90, 100, 149);
-  --card-background: rgba(72, 76, 135, 0.56);
+  --form-background: #000;
   --color-gray: #a2a09d74;
 }
 
